fix(Root): Broken style logout button

--- a/src/components/menu/menuPc/styles.module.css
+++ b/src/components/menu/menuPc/styles.module.css
@@ -247,7 +247,7 @@
 
 .logoutButton {
   font-family: 'Comic Sans MS', Arial, Helvetica, sans-serif;
-  display: flex;
+  display: inline;
   position: absolute;
   font-size: 12px;
   z-index: 1;
@@ -255,12 +255,13 @@
   line-height: 35px;
   text-align: center;
   right: 10px;
-  width: 88px;
+  width: 91px;
   height: 40px;
   background-color: rgb(27, 218, 2);
   border: 2px solid rgb(22, 185, 0);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  vertical-align: middle;
 }
 
 .logoutButton:hover {
